# oci-vault-mcp-resolver

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_INTEGRATION.md  CODE_EXPLAINED.md  CONTRIBUTING.md  DOCKER_MCP_INTEGRATION.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  SDK_IMPLEMENTATION.md  coverage.xml  demo_docker_mcp_integration.sh  docker-compose.yml  example-config.yaml  github_mcp_proxy.py  mcp-github-with-vault.sh  mcp-with-vault  mkdocs.yml  oci_vault_resolver.py  pyproject.toml  requirements.txt  test-mcp-config.yaml  test-sdk-example.yaml  test-setup.sh  upload-secret.sh
.github/workflows/: generate-docs.yml
.serena/: project.yml
.serena/memories/: code_style.md  codebase_structure.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
config/: README.md  resolver.yaml.example
docs/: API_DOCUMENTATION.md  ARCHITECTURE_DIAGRAMS.md  NAMING_CONVENTIONS.md  SSH_DEPLOYMENT.md  USER_GUIDE.md  index.md
scripts/: INSTALL_DEMO.md  README.md  check_doc_coverage.py  install.sh
tests/: INTEGRATION_TESTING.md  README.md  __init__.py  conftest.py  test_cache.py  test_cli.py  test_config.py  test_integration.py  test_oci_backend.py  test_parallel.py  test_parser.py  test_phase3.py  test_resolver.py  test_wrapper.py
web/: QUICKSTART.md  README.md  app.py  requirements.txt  start.sh
web/static/css/: style.css
web/static/js/: app.js
web/templates/: index.html
wrappers/: README.md  mcp_vault_proxy.py
wrappers/examples/: INDEX.md  QUICK-REFERENCE.md  README.md  anthropic.yaml  github.yaml  openai.yaml  postgres.yaml  setup-example.sh  slack.yaml  template.yaml
